[gd_scene load_steps=9 format=3 uid="uid://bfykok3ld6iit"]

[ext_resource type="Script" uid="uid://moaybw2efyvq" path="res://audio_clip_settings/audio_clip_settings.gd" id="1_d3307"]
[ext_resource type="PackedScene" uid="uid://sayqhlslio3r" path="res://volume_controller/volume_controller.tscn" id="2_6mynr"]
[ext_resource type="AudioStream" uid="uid://dt6awhwiqy7yl" path="res://assets/DM-CGS-03.wav" id="3_s01mg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s01mg"]
content_margin_left = 16.0
content_margin_top = 16.0
content_margin_right = 16.0
content_margin_bottom = 16.0
bg_color = Color(0, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.87451, 0.94902, 0.384314, 1)
corner_radius_top_left = 128
corner_radius_top_right = 128
corner_radius_bottom_right = 128
corner_radius_bottom_left = 128
corner_detail = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_solvu"]
content_margin_left = 16.0
content_margin_top = 16.0
content_margin_right = 16.0
content_margin_bottom = 16.0
bg_color = Color(0.87451, 0.94902, 0.384314, 1)
corner_radius_top_left = 128
corner_radius_top_right = 128
corner_radius_bottom_right = 128
corner_radius_bottom_left = 128
corner_detail = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6kcw1"]
content_margin_left = 16.0
content_margin_top = 16.0
content_margin_right = 16.0
content_margin_bottom = 16.0
bg_color = Color(1, 1, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.87451, 0.94902, 0.384314, 1)
corner_radius_top_left = 128
corner_radius_top_right = 128
corner_radius_bottom_right = 128
corner_radius_bottom_left = 128
corner_detail = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rnnws"]
content_margin_left = 16.0
content_margin_top = 16.0
content_margin_right = 16.0
content_margin_bottom = 16.0
bg_color = Color(0.87451, 0.94902, 0.384314, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_at372"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_detail = 4

[node name="AudioClipSettings" type="VBoxContainer" node_paths=PackedStringArray("rename_popup", "file_replace_dialog", "volume_controller")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -104.0
offset_top = -171.0
offset_right = 104.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_d3307")
rename_popup = NodePath("RenamePopup")
file_replace_dialog = NodePath("FileReplaceDialog")
volume_controller = NodePath("VolumeController")

[node name="VolumeController" parent="." instance=ExtResource("2_6mynr")]
layout_mode = 2

[node name="DecreaseButton" parent="VolumeController" index="0"]
theme_override_colors/font_color = Color(0.87451, 0.94902, 0.384314, 1)

[node name="VolumeSlider" parent="VolumeController" index="1"]
theme_override_styles/slider = SubResource("StyleBoxFlat_s01mg")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_solvu")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_6kcw1")

[node name="IncreaseButton" parent="VolumeController" index="2"]
theme_override_colors/font_color = Color(0.87451, 0.94902, 0.384314, 1)

[node name="HSeparator2" type="HSeparator" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="ReplaceButton" type="Button" parent="."]
layout_mode = 2
theme_override_colors/font_color = Color(0.87451, 0.94902, 0.384314, 1)
text = "Replace"

[node name="HSeparator3" type="HSeparator" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="RenameButton" type="Button" parent="."]
layout_mode = 2
theme_override_colors/font_color = Color(0.87451, 0.94902, 0.384314, 1)
text = "Rename"

[node name="HSeparator4" type="HSeparator" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="DeleteButton" type="Button" parent="."]
layout_mode = 2
theme_override_colors/font_color = Color(0.87451, 0.94902, 0.384314, 1)
text = "Delete"

[node name="HSeparator5" type="HSeparator" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="LoopButton" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.87451, 0.94902, 0.384314, 1)
theme_override_styles/pressed = SubResource("StyleBoxFlat_rnnws")
toggle_mode = true
text = "Loop"

[node name="HSeparator6" type="HSeparator" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="RenamePopup" type="PopupPanel" parent="."]
auto_translate_mode = 1
title = "Rename"
initial_position = 1
size = Vector2i(440, 360)
keep_title_visible = true
theme_override_styles/panel = SubResource("StyleBoxFlat_at372")

[node name="MarginContainer" type="MarginContainer" parent="RenamePopup"]
offset_left = 8.0
offset_top = 8.0
offset_right = 432.0
offset_bottom = 352.0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="RenamePopup/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="RenamePopup/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.94902, 0.913725, 1)
text = "Rename"
horizontal_alignment = 1

[node name="HSeparator7" type="HSeparator" parent="RenamePopup/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RenameLineEdit" type="LineEdit" parent="RenamePopup/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
placeholder_text = "Name"

[node name="HSeparator8" type="HSeparator" parent="RenamePopup/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DoneButton" type="Button" parent="RenamePopup/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Done"

[node name="HSeparator9" type="HSeparator" parent="RenamePopup/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CancelButton" type="Button" parent="RenamePopup/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.35975, 0.005, 1)
text = "Cancel"

[node name="FileReplaceDialog" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Replace File"
position = Vector2i(0, 36)
force_native = true
ok_button_text = "Open"
mode_overrides_title = false
file_mode = 0
use_native_dialog = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_s01mg")

[connection signal="volume_changed" from="VolumeController" to="." method="_on_volume_controller_volume_changed"]
[connection signal="pressed" from="ReplaceButton" to="." method="_on_replace_button_pressed"]
[connection signal="pressed" from="RenameButton" to="." method="_on_rename_button_pressed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="toggled" from="LoopButton" to="." method="_on_loop_button_toggled"]
[connection signal="text_submitted" from="RenamePopup/MarginContainer/VBoxContainer/RenameLineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="RenamePopup/MarginContainer/VBoxContainer/DoneButton" to="." method="_on_done_button_pressed"]
[connection signal="pressed" from="RenamePopup/MarginContainer/VBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]

[editable path="VolumeController"]
